Use java 25